[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=8.0"]

[project]
name = "weblogo"
dynamic = ["version"]
description ="WebLogo3 : Sequence Logos Redrawn"
authors = [
    { name = "Gavin Crooks", email = "gec@threeplusone.com" },
    ]
    
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bioinformatics", "visualization", "sequence logos"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "importlib-resources",
    "importlib-metadata"
]

[project.urls]
"Homepage" = "https://github.com/gecrooks/weblogo"
"Documentation" = "https://weblogo.readthedocs.io/"
"Issue Tracker" = "https://github.com/gecrooks/weblogo/issues"

[project.scripts]
weblogo = "weblogo._cli:main"
transformseq = "weblogo._transformseq:main"


docs = [
  "sphinx",
  "guzzle_sphinx_theme",
  ]


[tool.setuptools]
packages = ["weblogo"]


[tool.setuptools_scm]
fallback_version = "0.0.0.dev"


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 88
indent-width = 4
exclude = [
    "_ext",
]

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Don't complaine about unused imports in __init__.py
"__init__.py" = ["F401", "F403"]


# pytest configuration
# https://docs.pytest.org/en/7.2.x/reference/customize.html

[tool.pytest.ini_options]
testpaths = "tests"



[tool.coverage.run]
branch = true
source = ["weblogo"]
parallel = true

[tool.coverage.report]
omit = ['*_test.py',
    'weblogo/utils/deoptparse.py',
    'weblogo/_ext/*']

exclude_lines = [
  '\#\s*pragma: no cover',
  '^\s*raise AssertionError\b',
  '^\s*raise NotImplementedError\b',
  '^\s*return NotImplemented\b',
  '^\s*raise$',
  '^assert False\b',
  '''^if __name__ == ['"]__main__['"]:$''',
]


# mypy typecheck configuration
# https://mypy.readthedocs.io/en/stable/config_file.html

[tool.mypy]
files = 'weblogo'

# Suppresses error about unresolved imports
ignore_missing_imports = true

# Disallows functions without type annotations
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "guzzle-sphinx-theme>=0.7.11",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "setuptools-scm>=9.2.2",
    "sphinx>=8.1.3",
]

